@@ -43,4 +43,4 @@ config kadnode
 
 ##Disable port forwarding when this router is behind another
 ##router in a private network that supports UPnP/NAT-PMP.
-#	option disable_forwarding '1'
+#	option fwd_disable '1'
