@@ -51,7 +51,7 @@ start_instance() {
 		lpd_addr mode dns_port verbosity peerfile config \
 		auth_add_pkey auth_add_skey value_id query_tld
 
-	append_opts_boolean "$s" lpd_disable disable_forwarding
+	append_opts_boolean "$s" lpd_disable fwd_disable
 
 	echo "$OPTS" > $CONFIG_FILE
 
